2014-07-17  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/openvas_server.c (server_new_gnutls_init, server_new_gnutls_set):
	New functions.
	(server_new_internal): Call new functions. Refactor code accordingly.
	(openvas_server_new_mem): New function.
	(set_gnutls_dhparams): Fix memory leak.

	* misc/openvas_server.h: Add new function prototype.

2014-07-17  Michael Meyer <michael.meyer@greenbone.net>

	* nasl/nasl_http.c (_http_req): Added Cache-Control Header.

2014-07-16  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/openvas_server.c (openvas_server_connect): Remove interrupted
	case handling.

	* misc/openvas_server.h: Adjust function prototype.

2014-07-16  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/openvas_server.c (openvas_server_open_with_cert)
	(openvas_server_connect): Call openvas_server_verify() at the end of the
	function.

2014-07-15  Matthew Mundell <matthew.mundell@greenbone.net>

	* omp/omp.c (omp_get_tasks_ext): Add filter option.  Remove actions.

	* omp/omp.h (omp_get_tasks_opts_t): Add "filter" option.
	(omp_get_tasks_opts_defaults): Init filter.

2014-07-14  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/nvti.c (nvtis_remove): New function.

	* base/nvti.h: Add new function prototype.

	* base/nvticache.c (nvticache_get): Replace the old nvt entry when a
	duplicate OID is found and output a log message accordingly.

2014-07-14  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/nvti.c (nvti_shrink): Fix possible use-after free and double-free
	errors by nullifying the pointers after freeing the allocated memory.

2014-07-14  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_socket.c (nasl_close_socket): Adjust check for file
	descriptor value. Update documentation to explain rationale.

2014-07-09  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/network.c (open_SSL_connection, ovas_scanner_context_new): Don't